# attt

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
adapters/: evm_call_builder.py  evm_json_rpc_transport.py  evm_readonly_client.py
arenas/: base_arena.py  evm_fork_arena.py  evm_fork_execution_arena.py  local_mempool_arena.py  mock_arena.py  snapshot_manager.py  sui_localnet_arena.py
blue/: action_planner.py  context.py  defender_engine.py  defense_executor.py  local_mempool_watcher.py  response_policy_engine.py  threat_classifier.py  tx_feature_decoder.py
contracts/: MockAdversarialArenaHarness.sol  MockCircuitBreaker.sol  MockDexPool.sol  MockGovernance.sol  MockLST.sol  MockOracle.sol  MockVault.sol  MockWrapperHarness.sol
core/: capability_boundary.py  containment_policy.py  errors.py  fork_execution_policy.py  invariants.py  safety.py
docs/: BEGINNER_RUNBOOK.md  BLUE_TEAM_CAPABILITY_BOUNDARY.md  CAPABILITY_STATUS.md  CODEX_PR_REVIEW_PROTOCOL.md  DeFi_Defense_Simulation_Lab_Phase_2A5_Handoff_2026-06-10.md  EXTREME_RECON_MODEL.md  NO_FAKE_SCENARIO_STANDARD.md  PHASE_2A6_LIVE_ARTIFACT_REVIEW.md  PHASE_2A6_MANUAL_REVIEW_CHECKLIST.md  PHASE_2A6_OPERATOR_GUIDE.md  PHASE_2A_DEPTH_AUDIT.md  PHASE_2B_FIRST_DRILL_CANDIDATE.md  PHASE_2B_FORK_EXECUTION_DESIGN.md  PHASE_2B_PREFLIGHT.md  PHASE_2B_READINESS_CHECKLIST.md  PROJECT_STATE_CURRENT.md  RECON_CAPABILITY_BOUNDARY.md  RECON_TO_RED_DRILL_PIPELINE.md  RED_BLUE_CAPABILITY_MATRIX.md  RED_TEAM_CAPABILITY_BOUNDARY.md  RELEASE_CHECKLIST.md  (+3 more)
(+126 files in other folders)
