[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defi-defense-sim-lab"
version = "0.1.0"
description = "Isolated DeFi defense validation lab with executable local red drills and blind blue defense."
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
test = ["pytest>=8.0", "pyyaml>=6.0"]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "adapters*",
  "arenas*",
  "blue*",
  "core*",
  "environment*",
  "eval*",
  "evidence*",
  "forks*",
  "recon*",
  "redteam*",
  "reports*",
  "simulation*",
  "targets*",
]
exclude = [
  "contracts*",
  "docs*",
  "tests*",
  "examples*",
  "scripts*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
